1.2.3 to 1.2.4
----------------------------------------------------------------------
- fixed an issue where secondary IP addresses would be set when
  they were not included in collectd. Bug 1178. Thx again Bill.
- Added a new feature to fine tune RESOLVED messages in 
  notifications. Bug 1087. Thx Bill.
- Added HC counters.
- Corrected an error with BGP4 standard events.
- Added Netgear events.
- Listed all the parameters in an unformatted event.
- Added SystemEdge and Fujitsu-Seimens events, as well as new MGE-UPS
  event definitions.
- Added MGE UPS collections and reports.
- Make the tilde "~" character work in filters and rules. This
  allows for regular expressions in SQL queries in Postgres 7.4+
- Added support for RFC1628, the UPS MIB

1.2.2 to 1.2.3
----------------------------------------------------------------------
- A few small documentation fixes, including bug 1204 (thanks Chris)
  and bug 1185.
- Change the $echo variable in opennms.sh to $opennms_echo.  This should
  take care of problems people were seeing on Mandrake.
- Added data collections for TCP stats.
- Modified isReady for PollableService as a work around for hung polling.
- Added some SNMP Informant collections, reports and thresholds.
- Added NORTEL Contivity events. Bug 1223. Thx Julian
- Added some new Foundry event definitions. Bug 1234. Thx Ted
- Added the --color attribute to jRobin graphs. Bug 1239. Thx Gerald
- Tweaked the availability report format from suggestions from the
  list.
- Removed the possibility that 0.0.0.0 would show up as the IP
  address for a service in the ifservices table. Thx Bill
- Applied final version of poll outage editor. Bug 1116. Thx Craig

1.2.1 to 1.2.2
----------------------------------------------------------------------
- Fixed an issue with the webUI and null issnmpprimary values.

1.2.0 to 1.2.1
----------------------------------------------------------------------
- Fix source RPM builds ("srpm" build target).  Bug 1112.  Thanks, Tarus.