@@ -91,6 +91,11 @@ public final class EventUtil {
 	static final String TAG_SOURCE = "source";
 
 	/**
+	* The event descr xml tag
+	*/
+	static final String TAG_DESCR = "descr";
+
+	/**
 	 * The event time xml tag
 	 */
 	static final String TAG_TIME = "time";
@@ -407,6 +412,8 @@ public final class EventUtil {
 			}
 		} else if (parm.equals(TAG_SOURCE)) {
 			retParmVal = event.getSource();
+		} else if (parm.equals(TAG_DESCR)) {
+			retParmVal = event.getDescr();
 		} else if (parm.equals(TAG_NODEID)) {
 			retParmVal = Long.toString(event.getNodeid());
 		} else if (parm.equals(TAG_NODELABEL)) {
